cncProd/force-app/main/default/objects/global_var__c/global_var__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>JCC Global Variables</label>
</CustomObject>