cncProd/force-app/main/default/objects/global_var__c/fields/Account_Activation_EmailId__c.field-meta.xml
<CustomField>
    <fullName>Account_Activation_EmailId__c</fullName>
    <label>Account Activation EmailId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>