cncProd/force-app/main/default/objects/global_var__c/fields/APIGateway_url__c.field-meta.xml
<CustomField>
    <fullName>APIGateway_url__c</fullName>
    <label>APIGateway_url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>