cncProd/force-app/main/default/objects/global_var__c/fields/buId__c.field-meta.xml
<CustomField>
    <fullName>buId__c</fullName>
    <label>buId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>