cncProd/force-app/main/default/objects/global_var__c/fields/Cancel_Service_MC_TriggerId__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Service_MC_TriggerId__c</fullName>
    <label>Cancel Service MC TriggerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>