cncProd/force-app/main/default/objects/global_var__c/fields/ChangeOwnership__c.field-meta.xml
<CustomField>
    <fullName>ChangeOwnership__c</fullName>
    <description>Triggered Send Key for Change of Ownership Emails</description>
    <label>Change of Ownership (TriggeredSend Key)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>