cncProd/force-app/main/default/objects/global_var__c/fields/CITSeqNumGV__c.field-meta.xml
<CustomField>
    <fullName>CITSeqNumGV__c</fullName>
    <label>CITSeqNumGV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>