cncProd/force-app/main/default/objects/global_var__c/fields/cmsHeaderDomain__c.field-meta.xml
<CustomField>
    <fullName>cmsHeaderDomain__c</fullName>
    <label>cmsHeaderDomain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>