cncProd/force-app/main/default/objects/global_var__c/fields/CustomerCareEmail__c.field-meta.xml
<CustomField>
    <fullName>CustomerCareEmail__c</fullName>
    <description>Email Address of the CAC Support Team</description>
    <label>Customer Care Default Email</label>
    <type>Email</type>
</CustomField>