cncProd/force-app/main/default/objects/global_var__c/fields/CustomQuoteTriggeredId__c.field-meta.xml
<CustomField>
    <fullName>CustomQuoteTriggeredId__c</fullName>
    <label>CustomQuoteTriggeredId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>