cncProd/force-app/main/default/objects/global_var__c/fields/Default_Owner_C_C__c.field-meta.xml
<CustomField>
    <fullName>Default_Owner_C_C__c</fullName>
    <label>Default Owner (C&amp;C)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>