cncProd/force-app/main/default/objects/global_var__c/fields/DWHDelinkedVehicleOwner__c.field-meta.xml
<CustomField>
    <fullName>DWHDelinkedVehicleOwner__c</fullName>
    <description>Default Owner of the Delinked Vehicle, or Registered Vehicles that do not have an Owner.</description>
    <label>DWH Delinked Vehicle Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>