cncProd/force-app/main/default/objects/global_var__c/fields/Edit_Service_MC_TriggerId__c.field-meta.xml
<CustomField>
    <fullName>Edit_Service_MC_TriggerId__c</fullName>
    <label>Edit Service MC TriggerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>