cncProd/force-app/main/default/objects/global_var__c/fields/Forgot_Password_EmailId__c.field-meta.xml
<CustomField>
    <fullName>Forgot_Password_EmailId__c</fullName>
    <label>Forgot Password EmailId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>