cncProd/force-app/main/default/objects/global_var__c/fields/KIASeqNumGV__c.field-meta.xml
<CustomField>
    <fullName>KIASeqNumGV__c</fullName>
    <label>KIASeqNumGV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>