cncProd/force-app/main/default/objects/global_var__c/fields/MBSeqNumGV__c.field-meta.xml
<CustomField>
    <fullName>MBSeqNumGV__c</fullName>
    <label>MBSeqNumGV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>