cncProd/force-app/main/default/objects/global_var__c/fields/MC_ClientId__c.field-meta.xml
<CustomField>
    <fullName>MC_ClientId__c</fullName>
    <label>MC ClientId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>