cncProd/force-app/main/default/objects/global_var__c/fields/MobileConnect_API_Keyword__c.field-meta.xml
<CustomField>
    <fullName>MobileConnect_API_Keyword__c</fullName>
    <description>20201007: 
Prod --&gt; NzM6Nzg6MA
Part Copied --&gt; MTk6Nzg6MA</description>
    <inlineHelpText>Salesforce Marketing Cloud Mobile Connect API keyword</inlineHelpText>
    <label>MobileConnect API Keyword</label>
    <length>20</length>
    <type>Text</type>
</CustomField>