cncProd/force-app/main/default/objects/global_var__c/fields/MobileRedirect_URI_MB__c.field-meta.xml
<CustomField>
    <fullName>MobileRedirect_URI_MB__c</fullName>
    <label>MobileRedirect_URI_MB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>