cncProd/force-app/main/default/objects/global_var__c/fields/Opportunity_Seq_KIA__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Seq_KIA__c</fullName>
    <label>Opportunity_Seq_KIA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>