cncProd/force-app/main/default/objects/global_var__c/fields/PreferredModelTriggeredId__c.field-meta.xml
<CustomField>
    <fullName>PreferredModelTriggeredId__c</fullName>
    <description>this variable is to store the trigger send ID of PreferredModel MC</description>
    <label>PreferredModelTriggeredId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>