cncProd/force-app/main/default/objects/global_var__c/fields/Service_Cloud_SMS_MC_Key__c.field-meta.xml
<CustomField>
    <fullName>Service_Cloud_SMS_MC_Key__c</fullName>
    <label>Service Cloud SMS MC Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>