cncProd/force-app/main/default/objects/global_var__c/fields/TestDrive_Confirm_Email_MC_TriggerId__c.field-meta.xml
<CustomField>
    <fullName>TestDrive_Confirm_Email_MC_TriggerId__c</fullName>
    <label>TestDrive_Confirm_Email_MC_TriggerId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>