cncProd/force-app/main/default/objects/global_var__c/fields/TriggeredPush__c.field-meta.xml
<CustomField>
    <fullName>TriggeredPush__c</fullName>
    <label>Service Appointment MC Push Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>