cncProd/force-app/main/default/objects/global_var__c/fields/TriggeredPush_MB__c.field-meta.xml
<CustomField>
    <fullName>TriggeredPush_MB__c</fullName>
    <description>For MyMb push notification - Service appt trigger</description>
    <inlineHelpText>For MyMb push notification - Service appt trigger</inlineHelpText>
    <label>TriggeredPush_MB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>