cncProd/force-app/main/default/objects/global_var__c/fields/Update_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Update_Mobile_Number__c</fullName>
    <label>Update Mobile Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>