cncProd/force-app/main/default/objects/global_var__c/fields/Warehouse_Trigger_Send_key__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Trigger_Send_key__c</fullName>
    <label>Warehouse Trigger Send key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>