cncProd/force-app/main/default/objects/global_var__c/fields/WebRedirect_URI__c.field-meta.xml
<CustomField>
    <fullName>WebRedirect_URI__c</fullName>
    <label>WebRedirect_URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>